<resources>
    <string name="app_name">Mother Tongue K-12 Translator</string>
    <string name="baseUrl">http://mt-app-api.herokuapp.com/</string>
    <string name="kamayoBaseUrl">http://192.168.1.6:5000/</string>
    <string name="favorites">Favorites</string>
    <string name="translate">Translate</string>
    <string name="btn_translate">Translate</string>
    <string name="reset">Reset</string>
    <string name="enter_here">Enter here…</string>
    <string name="result_in_kamayo">Result in kamayo</string>
    <string name="result">Result</string>
    <string name="kamayo">Kamayo</string>
    <string name="sinugbanon">Sinugbuanon</string>
    <string name="phrases">Phrases</string>
    <string name="words">Words</string>
    <string name="view_translation_history">View Translation History</string>
    <string name="no_available_data">NO DATA AVAILABLE</string>

</resources>
