<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

<!--
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="Search history"
        app:showAsAction="ifRoom" />
-->




    <item
        android:id="@+id/action_phrases"
        android:enabled="true"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/phrases"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_translate"
        android:enabled="true"
        android:icon="@drawable/ic_translate_black_24dp"
        android:title="@string/translate"
        app:showAsAction="ifRoom" />




</menu>