<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranslateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/textsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="From language"/>

            <Spinner android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Translate into"/>

            <Spinner android:id="@+id/spinner2"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/inputLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                />

            <EditText
                android:layout_marginBottom="20dp"
                android:id="@+id/input"
                android:background="@drawable/btn_border"
                android:padding="20dp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/enter_here"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/resultLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                />

            <TextView
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_border"
                android:padding="20dp"
                android:textColor="#000000"
                android:id="@+id/sinugbanonResult"
                android:hint="@string/result"
                android:drawableLeft="@drawable/ic_translate_black_24dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/viewTranslated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/view_translation_history"
                android:textColor="#FF2196F3"
                android:layout_gravity="right"
                android:textAlignment="textEnd"
                android:layout_marginBottom="20dp"
                tools:ignore="RtlCompat,RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textsLayout"
            >

            <Button
                android:id="@+id/btnTranslate"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:background="@drawable/btn_rounded_5"
                android:layout_marginRight="20dp"
                android:textColor="#ffffff"
                android:text="@string/btn_translate"/>


            <Button
                android:id="@+id/btnReset"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:background="@drawable/btn_rounded_5"
                android:textColor="#ffffff"
                android:text="@string/reset" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>